--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,13 @@ services:
       - "8080:8080"
     depends_on:
       - mysql
+      - redis
     networks:
       - blog-network
     environment:
       SPRING_PROFILES_ACTIVE: docker
+      SPRING_REDIS_HOST: redis
+      SPRING_REDIS_PORT: 6379
 
   mysql:
     image: mysql:8
@@ -26,9 +29,20 @@ services:
     volumes:
       - mysql-data:/var/lib/mysql
 
+  redis:
+    image: redis:7-alpine
+    container_name: blog-redis
+    ports:
+      - "6379:6379"
+    networks:
+      - blog-network
+    volumes:
+      - redis-data:/data
+
 networks:
   blog-network:
     driver: bridge
 
 volumes:
   mysql-data:
+  redis-data:
